好啊也是成功地修复了hud能渲染成功的bug  * 我没测试过