@@ -41,8 +41,8 @@ import net.minecraft.world.WorldProviderHell;
 
 public class EntitySkeleton extends EntityMob implements IRangedAttackMob
 {
-    private final EntityAIArrowAttack aiArrowAttack = new EntityAIArrowAttack(this, 1.0D, 20, 60, 15.0F);
-    private final EntityAIAttackOnCollide aiAttackOnCollide = new EntityAIAttackOnCollide(this, EntityPlayer.class, 1.2D, false);
+    private EntityAIArrowAttack aiArrowAttack = new EntityAIArrowAttack(this, 1.0D, 20, 60, 15.0F);
+    private EntityAIAttackOnCollide aiAttackOnCollide = new EntityAIAttackOnCollide(this, EntityPlayer.class, 1.2D, false);
 
     public EntitySkeleton(World worldIn)
     {
@@ -73,7 +73,7 @@ public class EntitySkeleton extends EntityMob implements IRangedAttackMob
     protected void entityInit()
     {
         super.entityInit();
-        this.dataWatcher.addObject(13, Byte.valueOf((byte) 0));
+        this.dataWatcher.addObject(13, new Byte((byte)0));
     }
 
     /**
@@ -155,7 +155,7 @@ public class EntitySkeleton extends EntityMob implements IRangedAttackMob
                         if (itemstack.getItemDamage() >= itemstack.getMaxDamage())
                         {
                             this.renderBrokenItemStack(itemstack);
-                            this.setCurrentItemOrArmor(4, null);
+                            this.setCurrentItemOrArmor(4, (ItemStack)null);
                         }
                     }
 
@@ -184,8 +184,9 @@ public class EntitySkeleton extends EntityMob implements IRangedAttackMob
     {
         super.updateRidden();
 
-        if (this.ridingEntity instanceof EntityCreature entitycreature)
+        if (this.ridingEntity instanceof EntityCreature)
         {
+            EntityCreature entitycreature = (EntityCreature)this.ridingEntity;
             this.renderYawOffset = entitycreature.renderYawOffset;
         }
     }
@@ -197,8 +198,9 @@ public class EntitySkeleton extends EntityMob implements IRangedAttackMob
     {
         super.onDeath(cause);
 
-        if (cause.getSourceOfDamage() instanceof EntityArrow && cause.getEntity() instanceof EntityPlayer entityplayer)
+        if (cause.getSourceOfDamage() instanceof EntityArrow && cause.getEntity() instanceof EntityPlayer)
         {
+            EntityPlayer entityplayer = (EntityPlayer)cause.getEntity();
             double d0 = entityplayer.posX - this.posX;
             double d1 = entityplayer.posZ - this.posZ;
 
@@ -221,7 +223,7 @@ public class EntitySkeleton extends EntityMob implements IRangedAttackMob
 
     /**
      * Drop 0-2 items of this living's type
-     *  
+     *
      * @param wasRecentlyHit true if this this entity was recently hit by appropriate entity (generally only if player
      * or tameable)
      * @param lootingModifier level of enchanment to be applied to this drop
